k8s/prod/yolo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolov-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolov-k8s
  template:
    metadata:
      labels:
        app: yolov-k8s
    spec:
      containers:
      - name: yolov-k8s
        image: amiraniv/amiraniv-k8s-yolov5:v.54
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "2Gi"
            cpu: "100m"

---
# yolo-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: yolov-k8s
spec:
  selector:
    app: yolov-k8s
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
